# kvstore

./: Cargo.toml  Dockerfile  README.md
src/: main.rs  store.json  tui.rs
