[package]
name = "kvstore"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.26"
crossterm = "0.27"

[[bin]]
name = "kvstore"
path = "src/main.rs"

[[bin]]
name = "tui"
path = "src/tui.rs"
